src/test/ui/span/issue-24805-dropck-child-has-items-via-parent.nll.stderr
error[E0597]: `d1` does not live long enough
  --> $DIR/issue-24805-dropck-child-has-items-via-parent.rs:38:18
   |
LL |     _d = D_Child(&d1);
   |                  ^^^ borrowed value does not live long enough
...
LL | }
   | -
   | |
   | borrowed value only lives until here
   | borrow later used here, when `_d` is dropped
   |
   = note: values in a scope are dropped in the opposite order they are defined

error: aborting due to previous error

For more information about this error, try `rustc --explain E0597`.
